--- a/MyGame.html
+++ b/MyGame.html
@@ -1,1 +1,10 @@
-
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<meta charset="utf-8">
+		<title>My Game</title>
+	</head>
+	<body>
+		<script src="MyGameJS.js"></script>
+	</body>
+</html>
